sliding banner overflow fix

--- a/slidingBanner.css
+++ b/slidingBanner.css
@@ -14,6 +14,7 @@
   left: 5px;
   display: flex;
   align-items: flex-end;
+  width: 100%;
 }
 
 #side-slider-main {
